prevent hover on mobile and less margin

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 50px;
+    margin: 50px 0;
 }
 
 .App-footer {
